--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -27,9 +27,31 @@ dist.dir=dist
 dist.jar=${dist.dir}/ShiroOnSwing.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
+file.reference.bonecp-0.8.0.RELEASE.jar=/home/agung/Documents/Latihan/java/shiro/Shiro_test/lib/bonecp-0.8.0.RELEASE.jar
+file.reference.commons-beanutils-1.9.2.jar=/home/agung/Documents/Latihan/java/shiro/Shiro_test/lib/commons-beanutils-1.9.2.jar
+file.reference.commons-collections-3.2.1.jar=/home/agung/Documents/Latihan/java/shiro/Shiro_test/lib/commons-collections-3.2.1.jar
+file.reference.commons-lang-2.6.jar=/home/agung/Documents/Latihan/java/shiro/Shiro_test/lib/commons-lang-2.6.jar
+file.reference.commons-logging-1.2.jar=/home/agung/Documents/Latihan/java/shiro/Shiro_test/lib/commons-logging-1.2.jar
+file.reference.guava-15.0.jar=/home/agung/Documents/Latihan/java/shiro/Shiro_test/lib/guava-15.0.jar
+file.reference.log4j-1.2.16.jar=/home/agung/Documents/Latihan/java/shiro/Shiro_test/lib/log4j-1.2.16.jar
+file.reference.mysql-connector-java-5.1.23-bin.jar=/home/agung/Documents/Latihan/java/shiro/Shiro_test/lib/mysql-connector-java-5.1.23-bin.jar
+file.reference.shiro-all-1.2.4.jar=/home/agung/Documents/Latihan/java/shiro/Shiro_test/lib/shiro-all-1.2.4.jar
+file.reference.slf4j-api-1.7.12.jar=/home/agung/Documents/Latihan/java/shiro/Shiro_test/lib/slf4j-api-1.7.12.jar
+file.reference.slf4j-log4j12-1.6.1.jar=/home/agung/Documents/Latihan/java/shiro/Shiro_test/lib/slf4j-log4j12-1.6.1.jar
 includes=**
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${file.reference.bonecp-0.8.0.RELEASE.jar}:\
+    ${file.reference.commons-beanutils-1.9.2.jar}:\
+    ${file.reference.commons-collections-3.2.1.jar}:\
+    ${file.reference.commons-lang-2.6.jar}:\
+    ${file.reference.commons-logging-1.2.jar}:\
+    ${file.reference.guava-15.0.jar}:\
+    ${file.reference.log4j-1.2.16.jar}:\
+    ${file.reference.mysql-connector-java-5.1.23-bin.jar}:\
+    ${file.reference.shiro-all-1.2.4.jar}:\
+    ${file.reference.slf4j-api-1.7.12.jar}:\
+    ${file.reference.slf4j-log4j12-1.6.1.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
