--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,9 +1,10 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
-annotation.processing.processor.options=
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+application.title=ShiroOnSwing
+application.vendor=agung
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -26,6 +27,7 @@ dist.archive.excludes=
 dist.dir=dist
 dist.jar=${dist.dir}/ShiroOnSwing.jar
 dist.javadoc.dir=${dist.dir}/javadoc
+endorsed.classpath=
 excludes=
 file.reference.bonecp-0.8.0.RELEASE.jar=/home/agung/Documents/Latihan/java/shiro/Shiro_test/lib/bonecp-0.8.0.RELEASE.jar
 file.reference.commons-beanutils-1.9.2.jar=/home/agung/Documents/Latihan/java/shiro/Shiro_test/lib/commons-beanutils-1.9.2.jar
@@ -76,7 +78,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=shiroonswing.ShiroOnSwing
+main.class=com.mymanager.test.testForm
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
