--- a/src/shiro.ini
+++ b/src/shiro.ini
@@ -4,7 +4,7 @@
  # =============================================================================
  [main]
  jdbcRealm = org.apache.shiro.realm.jdbc.JdbcRealm
- ds = com.mymanager.security.MyDataSource
+ ds = com.opass.security.MyDataSource
  jdbcRealm.dataSource=$ds
 
 
